--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
   </head>
 
   <body>
+      
 
       <h1 id="f">Заголовок</h1>
       <div id="content"></div>
+
+      //= footer.html
 
   </body>
 
