--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
       <h1 id="f">Заголовок</h1>
       <div id="content"></div>
 
+      <script type="text/babel" src="js/contacts.js"></script>
+
       //= footer.html
 
   </body>
