дошел до if-else

--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
 
       <h1 id="f">Заголовок</h1>
       <div id="content"></div>
+      <div id="app"></div>
 
-      <script type="text/babel" src="js/contacts.js"></script>
+      <script type="text/babel" src="js/app.js"></script>
+      <!-- <script type="text/babel" src="js/contacts.js"></script> -->
+
 
       //= footer.html
 
